update all project fonts

--- a/html/flex-it/pages/service/services.html
+++ b/html/flex-it/pages/service/services.html
@@ -32,7 +32,7 @@
         
         <!-- Font Family -->
         <link rel="stylesheet" href="../../../../css2?family=Jost:wght@400;500;600;700;800&amp;display=swap">
-        
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
         <!-- main-LTR -->
         <link rel="stylesheet" href="../../css/main-LTR.css">
         <title> flex-IT   |   Услуги </title>
