update all project

--- a/html/flex-it/pages/aboutUs/about-us.html
+++ b/html/flex-it/pages/aboutUs/about-us.html
@@ -109,22 +109,22 @@
         <!-- Start first about div-->
         <div class="content-block  ">
           <div class="row">
-            <div class="col-12 col-lg-6 d-flex align-items-center order-1 order-lg-0 about-col pad-end  wow fadeInUp " data-wow-delay="0.6s">
+            <div class="col-12 col-lg-6 d-flex align-items-center order-1 order-lg-0 about-col pad-end  wow fadeInUp mt-5" data-wow-delay="0.6s">
               <div class="text-area ">
                 <div class="sec-heading  light-title ">
-                  <div class="content-area"><span class=" pre-title       wow fadeInUp " data-wow-delay=".2s">О нас</span>
-                    <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">Доверие клиентов по всему миру с <span class='featured-text'>  2013 <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 500 150" preserveaspectratio="none"><path d="M7.7,145.6C109,125,299.9,116.2,401,121.3c42.1,2.2,87.6,11.8,87.3,25.7"></path></svg></span>года</h2>
+                  <div class="content-area"><span class=" pre-title       wow fadeInUp " data-wow-delay=".2s">О  компании</span>
+                    <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">Разработка Аналитика Внедрение Поддержка  <span class='featured-text'>  АИС СОКОЛ <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 500 150" preserveaspectratio="none"><path d="M7.7,145.6C109,125,299.9,116.2,401,121.3c42.1,2.2,87.6,11.8,87.3,25.7"></path></svg></span></h2>
                   </div>
                 </div>
-                <p class=" about-text">Почему выбирают нас?
-                      <br>
-                  Мы предлагаем полный цикл разработки и интеграции: от идеи до внедрения. Надёжные решения для вашего бизнеса!</p>
+                <p class=" about-text">Компания «АИС Сокол»
+                  <br>
+                  Инновационная команда профессионалов, действующая на рынке с 2004 года и специализирующаяся на разработке систем автоматизации бизнес-процессов. За долгие годы работы компания зарекомендовала себя как надёжный партнёр в сфере создания кастомизированных решений, способных отвечать на самые сложные и амбициозные задачи клиентов. Подход «АИС Сокол» строится на глубоком анализе и понимании бизнес-процессов заказчика, что позволяет предлагать действительно эффективные и адаптированные под конкретные требования продукты.</p>
                 <div class="info-items-list ">
                   <div class="row ">
                     <div class="col-9 col-xl-6">
                       <div class="info-item"><i class="flaticon-medal  info-icon"></i>
                         <div class="info-content">
-                          <h5 class="info-title">Лидеры в разработке </h5>
+                          <h5 class="info-title">Глубокая бизнес-экспертиза </h5>
                           <p class="info-text">Создаём инновационные решения, которые помогают вашему бизнесу расти и развиваться.</p>
                         </div>
                       </div>
@@ -132,15 +132,15 @@
                     <div class="col-9 col-xl-6">
                       <div class="info-item"><i class="flaticon-game-console info-icon"></i>
                         <div class="info-content">
-                          <h5 class="info-title">Всегда на связи </h5>
-                          <p class="info-text">Готовы ответить на ваши вопросы и предложить лучшие решения в кратчайшие сроки.</p>
+                          <h5 class="info-title">Фокус на бизнес-ценностях </h5>
+                          <p class="info-text">В основе разработки решений лежит детальный анализ бизнес-процессов клиентов, что позволяет выявлять и решать корневые проблемы, а не просто выполнять техническое задание.</p>
                         </div>
                       </div>
                     </div>
                     <div class="col-9 col-xl-6">
                       <div class="info-item"><i class="flaticon-map info-icon"></i>
                         <div class="info-content">
-                          <h5 class="info-title">Работаем по всему миру  </h5>
+                          <h5 class="info-title">проблемно-ориентированный подход  </h5>
                           <p class="info-text">Предоставляем услуги клиентам из разных стран, адаптируясь под ваши потребности.</p>
                         </div>
                       </div>
@@ -148,8 +148,8 @@
                     <div class="col-9 col-xl-6">
                       <div class="info-item"><i class="flaticon-technical-support-1  info-icon"></i>
                         <div class="info-content">
-                          <h5 class="info-title">Поддержка 24/7  </h5>
-                          <p class="info-text">Обеспечиваем круглосуточную поддержку, чтобы ваш бизнес работал без перебоев.</p>
+                          <h5 class="info-title">Бизнес-аналитика  </h5>
+                          <p class="info-text">Команда экспертов-традиционалистов в области бизнес-анализа обеспечивает точность сбора требований и дальнейшую трансформацию их в техническую спецификацию, что снижает риски неудачной реализации.</p>
                         </div>
                       </div>
                     </div>
