--- a/html/flex-it/pages/branch/service-single-14.html
+++ b/html/flex-it/pages/branch/service-single-14.html
@@ -36,7 +36,7 @@
         <!-- main-LTR -->
         <link rel="stylesheet" href="../../css/main-LTR.css">
     <link rel="stylesheet" href="../../css/mobile.css">
-        <title> Аис Сокол   |   Финансовый сектор и страхование</title>
+        <title> Аис Сокол   |   Ритейл и франчайзинг</title>
   </head>
   <body class=" dark-theme "> 
     <!--Start Page Header-->
@@ -91,14 +91,18 @@
         <div class="row mt-5">
           <!--Start service content-->
           <div class="col-12 col-xl-8  ">
-            <div class="service-content-area ">
+            <div class="service-content-area">
               <div class="featured-img-area part"><img class="feat-img img-fluid" src="../../assets/images/portfolio/img.png" style="height: 450px; width: 900px"  alt="featured image"></div>
               <div class="service-content">
                 <div class="part">
-                  <h2 class="service-title">Банковские услуги и инвестиционный банкинг</h2>
-                  <p class="service-text">– Розничный банкинг и корпоративный банкинг:</p>
-                  <p class="service-text">• Обслуживание физических лиц и предприятий (кредиты, депозиты, расчёты). <br/> • Решения по автоматизации обработки клиентской документации (например, системы распознавания текста).</p>
-                  <p class="service-text">Программные решения: Прогнозно аналитические модули и научные ИИ сервисы для оценки рисков, моделирования трендов и оптимизации управленческих решений.</p>
+                  <h2 class="service-title">Сети супермаркетов, торговые центры и специализированный ритейл</h2>
+                  <p class="service-text">– Обеспечение безопасности и анализ клиентского поведения:</p>
+                  <p class="service-text">• Системы распознавания лиц для контроля доступа, трекинг и анализ перемещений для построения тепловых карт посещаемости.</p>
+                  <p class="service-text">Программные решения:<br/>
+                    – Многофункциональные интерфейсы доступа для интеграции систем управления продажами и CRM решений;<br/>
+                    – Разработка и подключение ботов для улучшения клиентской поддержки через мессенджеры;<br/>
+                    – Веб сайты, интернет магазины и лендинги с SEO и рекламой для усиления онлайн присутствия.
+                  </p>
                 </div>
                 <div class="part">
                   <div class="two-cols-img ">
@@ -112,38 +116,6 @@
                     </div>
                   </div>
                 </div>
-                <div class="part">
-                  <h2 class="service-title">Страхование</h2>
-                  <p class="service-text">– P&C, жизненное, медицинское страхование и перестрахование:</p>
-                  <p class="service-text">• Автоматизация оценки ущерба, прогноз убытков, обработка страховых случаев и документальная автоматизация.<br/>
-                    • Возможна интеграция систем интеллектуального контроля, в том числе модулей ИИ для скоринга и анализа данных.
-                  </p>
-                </div>
-                <div class="part">
-                  <div class="info-items-list">
-                    <div class="row">
-                      <h2 class="service-title">Программные решения:</h2>
-                      <div class="col-12 col-md-6 ">
-
-                        <div class="info-item"><span class="info-number ">01.</span>
-                          <div class="info-content">
-                            <h5 class="info-title">Интеграция модулей ИИ</h5>
-                            <p class="info-text">Платформа для быстрого внедрения ИИ моделей в существующие процессы.</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-12 col-md-6 ">
-                        <div class="info-item"><span class="info-number ">02.</span>
-                          <div class="info-content">
-                            <h5 class="info-title">Система управления доступом</h5>
-                            <p class="info-text">Защита корпоративной информации с многоуровневой аутентификацией.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
               </div>
             </div>
           </div>
@@ -154,7 +126,7 @@
               <div class="sidebar-pane">
                 <h2 class="sidebar-title">Отрасли</h2>
                 <ul class="list">
-                  <li class="list-item active"><i class="flaticon-web-development font-icon"></i><a href="./service-single-finance.html">Финансовый сектор<br/> и страхование<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item"><i class="flaticon-web-development font-icon"></i><a href="./service-single-finance.html">Финансовый сектор<br/> и страхование<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-2.html">Здравоохранение и медицина<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-3.html">Образование и обучение<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-4.html">Производство и<br/> промышленность<i class="bi bi-arrow-right icon "></i></a></li>
@@ -166,9 +138,9 @@
                   <li class="list-item"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-9.html">Строительство и недвижимость<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-10.html">Государственный сектор<br/> и общественные организации<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-11.html">Агро-<br/>промышленный<br/> комплекс<i class="bi bi-arrow-right icon "></i></a></li>
-                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-12.html">Юридические <br/> фирмы<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-12.html">Юридические <br/> фирмы<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-13.html">Автомобильная и  <br/> аэрокосмическая<br/> промышленность<i class="bi bi-arrow-right icon "></i></a></li>
-                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-14.html">Ритейл и франчайзинг<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item active"><i class="flaticon-profile font-icon"></i><a href="./service-single-14.html">Ритейл и франчайзинг<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-15.html">Научно-<br/>исследовательские<br/> институты<i class="bi bi-arrow-right icon "></i></a></li>
                 </ul>
               </div>
