--- a/html/flex-it/pages/portfolio/portfolio-grid.html
+++ b/html/flex-it/pages/portfolio/portfolio-grid.html
@@ -93,8 +93,8 @@
     <section class="portfolio mega-section   " id="portfolio">
       <div class="container">
         <div class="sec-heading  ">
-          <div class="content-area mt-5"><span class=" pre-title       wow fadeInUp " data-wow-delay=".2s">Портфолио</span>
-            <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">потрясающее <span class='hollow-text'>портфолио</span></h2>
+          <div class="content-area mt-5"><span class=" pre-title       wow fadeInUp " data-wow-delay=".2s">Проекты</span>
+            <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">Наш опыт отраженный в проектах</h2>
           </div>
           <!--          <div class=" cta-area   wow fadeInUp" data-wow-delay=".8s"><a class="cta-btn btn-solid    " href="../portfolio/portfolio-grid.html">Больше <i class="bi bi-arrow-right icon "></i></a></div>-->
         </div>
