--- a/html/flex-it/pages/service/service-single-argoTech.html
+++ b/html/flex-it/pages/service/service-single-argoTech.html
@@ -85,35 +85,17 @@
 
     </div>
   </header>
-    <!--End Page Header-->
-    <!-- Start inner Page hero-->
-    <section class="d-flex align-items-center page-hero  inner-page-hero " id="page-hero">
-      <div class="overlay-photo-image-bg parallax" data-bg-img="assets/images/hero/inner-page-hero.jpg" data-bg-opacity="1"></div>
-      <div class="overlay-color" data-bg-opacity=".75"></div>
-      <div class="container">
-        <div class="hero-text-area centerd">
-          <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">ReID‑ система межкамерного трекинга</h1>
-          <nav aria-label="breadcrumb ">
-            <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
-              <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
-              <li class="breadcrumb-item active">Услуги подробнее</li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </section>
-    <!-- End inner Page hero-->
-    <!-- Start inner Page hero-->
+
     <div class="service-single "> 
       <div class="container">
         <div class="row">
           <!--Start service content-->
-          <div class="col-12 col-xl-8  ">
-            <div class="service-content-area">
+          <div class="col-12 col-xl-8 ">
+            <div class="service-content-area mt-5">
               <div class="featured-img-area part"><img class="feat-img img-fluid" src="../../assets/images/portfolio/img.png" style="height: 450px; width: 900px"  alt="featured image"></div>
               <div class="service-content">
                 <div class="part">
-                  <h2 class="service-title">подробнее</h2>
+                  <h2 class="service-title"></h2>
                   <p class="service-text">ReID‑система межкамерного трекинга — это интегрированное решение для сквозного отслеживания объектов на территории с множеством камер. Система объединяет видеопотоки из различных точек наблюдения, автоматически распознаёт и сопоставляет объекты (людей, транспорт, оборудование) при переходе из зоны покрытия одной камеры в зону другой, и строит непрерывные траектории их перемещения. Благодаря единой платформе операторы получают полную картину передвижений в реальном времени и историю перемещений за любой период.</p>
                 </div>
                 <div class="part">
