--- a/html/flex-it/pages/branch/service-single-11.html
+++ b/html/flex-it/pages/branch/service-single-11.html
@@ -36,7 +36,7 @@
         <!-- main-LTR -->
         <link rel="stylesheet" href="../../css/main-LTR.css">
     <link rel="stylesheet" href="../../css/mobile.css">
-        <title> АИС Сокол   |   Финансовый сектор и страхование</title>
+        <title> АИС Сокол   |   Агропромышленный комплекс</title>
   </head>
   <body class=" dark-theme "> 
     <!--Start Page Header-->
@@ -85,26 +85,8 @@
 
       </div>
     </header>
-    <!--End Page Header-->
-    <!-- Start inner Page hero-->
-    <section class="d-flex align-items-center page-hero  inner-page-hero " id="page-hero">
-      <div class="overlay-photo-image-bg parallax" data-bg-img="assets/images/hero/inner-page-hero.jpg" data-bg-opacity="1"></div>
-      <div class="overlay-color" data-bg-opacity=".75"></div>
-      <div class="container">
-        <div class="hero-text-area centerd">
-          <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Финансовый сектор и страхование</h1>
-          <nav aria-label="breadcrumb ">
-            <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
-              <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
-              <li class="breadcrumb-item active">Отрасли</li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </section>
-    <!-- End inner Page hero-->
-    <!-- Start inner Page hero-->
-    <div class="service-single "> 
+
+    <div class="service-single mt-5">
       <div class="container">
         <div class="row">
           <!--Start service content-->
@@ -113,10 +95,12 @@
               <div class="featured-img-area part"><img class="feat-img img-fluid" src="../../assets/images/portfolio/img.png" style="height: 450px; width: 900px"  alt="featured image"></div>
               <div class="service-content">
                 <div class="part">
-                  <h2 class="service-title">Банковские услуги и инвестиционный банкинг</h2>
-                  <p class="service-text">– Розничный банкинг и корпоративный банкинг:</p>
-                  <p class="service-text">• Обслуживание физических лиц и предприятий (кредиты, депозиты, расчёты). <br/> • Решения по автоматизации обработки клиентской документации (например, системы распознавания текста).</p>
-                  <p class="service-text">Программные решения: Прогнозно аналитические модули и научные ИИ сервисы для оценки рисков, моделирования трендов и оптимизации управленческих решений.</p>
+                  <h2 class="service-title">Средние аграрные предприятия (фермерские хозяйства)</h2>
+                  <p class="service-text">– Локальный мониторинг посевов и управление ресурсами:</p>
+                  <p class="service-text">• Решения на базе компьютерного зрения для отслеживания состояния растений и оптимизации полевых работ.</p>
+                  <p class="service-text">Программные решения:<br/>
+                    – Агротехнологические платформы на базе компьютерного зрения — комплексное управление агрообъектами с анализом снимков с дронов/спутников, построением актуальных карт угодий и оперативным реагированием на изменения.
+                  </p>
                 </div>
                 <div class="part">
                   <div class="two-cols-img ">
@@ -131,35 +115,11 @@
                   </div>
                 </div>
                 <div class="part">
-                  <h2 class="service-title">Страхование</h2>
-                  <p class="service-text">– P&C, жизненное, медицинское страхование и перестрахование:</p>
-                  <p class="service-text">• Автоматизация оценки ущерба, прогноз убытков, обработка страховых случаев и документальная автоматизация.<br/>
-                    • Возможна интеграция систем интеллектуального контроля, в том числе модулей ИИ для скоринга и анализа данных.
+                  <h2 class="service-title">Крупные агропромышленные холдинги</h2>
+                  <p class="service-text">– Централизованный сбор данных и прогнозирование урожайности:</p>
+                  <p class="service-text">• Интегрированные платформы с геопривязкой, IoT решениями и аналитикой для масштабного мониторинга и управления агрообъектами.<br/>
+                    • Возможна интеграция прогнозно аналитических модулей для оценки рисков и оптимизации затрат.
                   </p>
-                </div>
-                <div class="part">
-                  <div class="info-items-list">
-                    <div class="row">
-                      <h2 class="service-title">Программные решения:</h2>
-                      <div class="col-12 col-md-6 ">
-
-                        <div class="info-item"><span class="info-number ">01.</span>
-                          <div class="info-content">
-                            <h5 class="info-title">Интеграция модулей ИИ</h5>
-                            <p class="info-text">Платформа для быстрого внедрения ИИ моделей в существующие процессы.</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-12 col-md-6 ">
-                        <div class="info-item"><span class="info-number ">02.</span>
-                          <div class="info-content">
-                            <h5 class="info-title">Система управления доступом</h5>
-                            <p class="info-text">Защита корпоративной информации с многоуровневой аутентификацией.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
                 </div>
 
               </div>
@@ -183,6 +143,11 @@
                   <li class="list-item"><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-8.html">Гостиничный и<br/> туристический бизнес<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-9.html">Строительство и недвижимость<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-10.html">Государственный сектор<br/> и общественные организации<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item active"><i class="flaticon-profile font-icon"></i><a href="./service-single-11.html">Агро-<br/>промышленный<br/> комплекс<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-12.html">Юридические <br/> фирмы<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-13.html">Автомобильная и  <br/> аэрокосмическая<br/> промышленность<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-14.html">Ритейл и франчайзинг<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-15.html">Научно-<br/>исследовательские<br/> институты<i class="bi bi-arrow-right icon "></i></a></li>
                 </ul>
               </div>
             </div>
