--- a/html/flex-it/pages/branch/service-single-5.html
+++ b/html/flex-it/pages/branch/service-single-5.html
@@ -85,28 +85,10 @@
 
       </div>
     </header>
-    <!--End Page Header-->
-    <!-- Start inner Page hero-->
-    <section class="d-flex align-items-center page-hero  inner-page-hero " id="page-hero">
-      <div class="overlay-photo-image-bg parallax" data-bg-img="assets/images/hero/inner-page-hero.jpg" data-bg-opacity="1"></div>
-      <div class="overlay-color" data-bg-opacity=".75"></div>
+
+    <div class="service-single ">
       <div class="container">
-        <div class="hero-text-area centerd">
-          <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Энергетика и коммунальные услуги</h1>
-          <nav aria-label="breadcrumb ">
-            <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
-              <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
-              <li class="breadcrumb-item active">Отрасли</li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </section>
-    <!-- End inner Page hero-->
-    <!-- Start inner Page hero-->
-    <div class="service-single "> 
-      <div class="container">
-        <div class="row">
+        <div class="rowmt-5">
           <!--Start service content-->
           <div class="col-12 col-xl-8  ">
             <div class="service-content-area">
@@ -175,6 +157,11 @@
                   <li class="list-item"><i class="flaticon-nanotechnology font-icon"></i><a href="./service-single-8.html">Гостиничный и<br/> туристический бизнес<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-web-domain font-icon"></i><a href="./service-single-9.html">Строительство и недвижимость<i class="bi bi-arrow-right icon "></i></a></li>
                   <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-10.html">Государственный сектор<br/> и общественные организации<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-11.html">Агро-<br/>промышленный<br/> комплекс<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-12.html">Юридические <br/> фирмы<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item"><i class="flaticon-profile font-icon"></i><a href="./service-single-13.html">Автомобильная и  <br/> аэрокосмическая<br/> промышленность<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-14.html">Ритейл и франчайзинг<i class="bi bi-arrow-right icon "></i></a></li>
+                  <li class="list-item "><i class="flaticon-profile font-icon"></i><a href="./service-single-15.html">Научно-<br/>исследовательские<br/> институты<i class="bi bi-arrow-right icon "></i></a></li>
                 </ul>
               </div>
             </div>
