--- a/html/flex-it/pages/service/service-single-7.html
+++ b/html/flex-it/pages/service/service-single-7.html
@@ -85,25 +85,7 @@
 
   </div>
 </header>
-<!--End Page Header-->
-<!-- Start inner Page hero-->
-<section class="d-flex align-items-center page-hero  inner-page-hero " id="page-hero">
-  <div class="overlay-photo-image-bg parallax" data-bg-img="assets/images/hero/inner-page-hero.jpg" data-bg-opacity="1"></div>
-  <div class="overlay-color" data-bg-opacity=".75"></div>
-  <div class="container">
-    <div class="hero-text-area centerd">
-      <h1 class="hero-title  wow fadeInUp" data-wow-delay=".2s">Интеллектуальные информационные системы под ключ (CRM / ERP / SCADA)</h1>
-      <nav aria-label="breadcrumb ">
-        <ul class="breadcrumb wow fadeInUp" data-wow-delay=".6s">
-          <li class="breadcrumb-item"><a class="breadcrumb-link" href="#0"><i class="bi bi-house icon "></i>Главная</a></li>
-          <li class="breadcrumb-item active">Услуги подробнее</li>
-        </ul>
-      </nav>
-    </div>
-  </div>
-</section>
-<!-- End inner Page hero-->
-<!-- Start inner Page hero-->
+
 <div class="service-single ">
   <div class="container">
     <div class="row">
@@ -113,7 +95,7 @@
           <div class="featured-img-area part"><img class="feat-img img-fluid" src="../../assets/images/portfolio/img.png" style="height: 450px; width: 900px"  alt="featured image"></div>
           <div class="service-content">
             <div class="part">
-              <h2 class="service-title">Описание</h2>
+              <h2 class="service-title"></h2>
               <p class="service-text">Продукт «Интеллектуальные информационные системы под ключ» представляет собой комплексное решение для разработки корпоративных систем, охватывающих управление взаимоотношениями с клиентами (CRM), планирование ресурсов предприятия (ERP) и системы управления технологическими процессами (SCADA). Решение включает полный цикл разработки – от проектирования и реализации до поддержки и обслуживания, обеспечивая интеграцию с системами искусственного интеллекта для аналитической обработки данных. Продукт гарантирует надежную авторизацию пользователей, многоуровневый доступ через веб-интерфейсы, мобильные приложения и Telegram-боты, а также масштабируемую архитектуру и отказоустойчивость в условиях высоких нагрузок.</p>
             </div>
             <div class="part">
